tests/expected_invalid_affine_after_let_move.diag.out
<input>:13:5: error: affine value 'receipt' was already moved
        receipt
        ^^^^^^^
<input>:12:16: note: 'receipt' was previously moved here
        let next = receipt;
                   ^^^^^^^
